# viewer

./: .gitignore  Cargo.toml  README.md  pixi.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yaml  release.yaml
src/: app.rs  connection.rs  lib.rs  main.rs  theme.rs  web.rs
src/ui/: status_bar.rs
src/views/diagnostics/: mod.rs  system.rs
src/views/nodes/: mod.rs  system.rs
src/views/topics/: mod.rs  system.rs
web/: index.html
