[package]
name = "rewire-viewer"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"
description = "Rewire viewer based on Rerun API for bridge introspection"
keywords = ["ros2", "rerun", "robotics", "visualization", "rewire"]
categories = ["science::robotics", "visualization"]
repository = "https://github.com/rewire-run/viewer"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "rewire-viewer"
path = "src/main.rs"

[features]
default = ["native"]
native = ["rewire-extras/grpc"]

[dependencies]
arrow = "58"
egui = "0.35"
egui_extras = "0.35"
re_chunk_store = "0.34"
re_entity_db = "0.34"
re_log = "0.34"
re_log_types = "0.34"
re_sdk_types = "0.34"
re_types_core = "0.34"
re_ui = "0.34"
re_viewer = { version = "0.34", default-features = false }
re_viewer_context = "0.34"
rewire-extras = { git = "https://github.com/rewire-run/extras", tag = "v0.7.0", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
clap = { version = "4", features = ["derive"] }
eframe = "0.35"
mimalloc = "0.1"
re_crash_handler = "0.34"
re_grpc_client = "0.34"
re_log_channel = "0.34"
re_memory = "0.34"
re_uri = "0.34"
rerun = { version = "0.34", default-features = false, features = [
  "native_viewer",
  "sdk",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
eframe = { version = "0.35", default-features = false, features = ["wgpu"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-time = "1"
web-sys = { version = "0.3.77", features = [
  "DomException",
  "EncodedVideoChunk",
  "EncodedVideoChunkInit",
  "EncodedVideoChunkType",
  "HardwareAcceleration",
  "HtmlCanvasElement",
  "Navigator",
  "VideoDecoder",
  "VideoDecoderConfig",
  "VideoDecoderInit",
  "VideoFrame",
  "Window",
] }
